Fix desktop top spacing

--- a/assets/base.css
+++ b/assets/base.css
@@ -3002,7 +3002,7 @@ label:has(input[type='checkbox']:disabled) {
 
 /* Override for swatch labels to maintain block display */
 .variant-option__button-label--has-swatch:has(input[type='radio']) {
-  display: block;
+  display: inline-grid;
 }
 
 /* Add to cart button */
@@ -4230,6 +4230,14 @@ product-recommendations:has([data-has-recommendations='false']) {
 /* Contact page: extra top spacing on desktop to clear navbar */
 @media screen and (min-width: 750px) {
   [data-template="page.contact"] .section-wrapper:first-child .spacing-style {
+    margin-top: 50px;
+  }
+
+  [data-template="product"] .product-information {
+    padding-top: 50px;
+  }
+
+  [data-template="collection"] .product-grid-container {
     margin-top: 50px;
   }
 }
